# hertzian

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  pyproject.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
docs/: verification.md
python/hertzian/: __init__.py  _core.pyi  calibration.py
scripts/: calibrate_gothic_law.py  check-no-raw-python.sh  fit_reduced_law.py  render_coupling_cross_section.py  render_gallery.py  render_pressure_distribution.py  render_pressure_distribution_asymmetric.py  render_pressure_law.py
src/: fft.rs  geometry.rs  grid.rs  influence.rs  kernel.rs  lib.rs  material.rs  pressure.rs  problem.rs  python.rs  reduced.rs  reference.rs  scenarios.rs  solution.rs  solver.rs  validation.rs
tests/: test_arbitrary_shape.py  test_calibration.py  test_cross_validation.py  test_pressure_law.py  test_reduced_law.py  test_smoke.py  test_solver.py
