[package]
name = "hertzian"
version = "0.0.0"
edition = "2021"
rust-version = "1.94"
description = "FFT-accelerated elastic half-space normal contact solver (Rust core with PyO3 bindings)."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gyakusu/hertzian"
keywords = ["contact-mechanics", "fft", "hertz", "tribology", "pyo3"]
categories = ["science", "mathematics"]
# Not published to crates.io yet; distribution is via PyPI wheels (maturin).
publish = false

[lib]
name = "hertzian"
# `cdylib` builds the Python extension module; `rlib` lets us unit-test the
# numerical core with `cargo test` without going through Python.
crate-type = ["cdylib", "rlib"]

[dependencies]
# NOTE: `extension-module` is intentionally NOT enabled here. It is added only
# for wheel builds via `[tool.maturin] features`, so that `cargo test` and
# `cargo clippy` can link against libpython locally and in CI.
pyo3 = "0.29"
# rust-numpy: the zero-copy NumPy <-> ndarray bridge for the PyO3 layer (P3).
# Pinned to the pyo3 0.29 series (aligned versioning) so a single Complex/pyo3
# stack is shared, and it tracks ndarray 0.16 — hence the ndarray pin below.
numpy = "0.29"

# Numerical core (first milestone: circular Hertz via zero-padded DC-FFT).
# ndarray is pinned to 0.16 for forward compatibility with rust-numpy (the
# zero-copy PyO3 bridge added in P3, which tracks ndarray a release behind).
ndarray = "0.16"
# realfft wraps rustfft for the real->complex row transform (~2x cheaper than
# C2C); rustfft provides the complex column transform. They share a single
# num-complex (0.4) version, so one Complex<f64> type is used across the crate.
realfft = "3.5"
rustfft = "6.4"
num-complex = "0.4"

# Not yet wired up (later milestones): rayon (parallelism, P5) and
# numpy/rust-numpy (zero-copy NumPy bridge, P3).

[lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
# Strict static analysis: deny in CI via `cargo clippy -- -D warnings`.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Optimise dependencies even in dev/test builds so the FFT-heavy unit tests run
# quickly, while our own crate stays unoptimised for debuggable stack traces.
[profile.dev.package."*"]
opt-level = 3
